opa-config/namespace-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled
    opa-istio-injection: enabled
