opa-config/ext-authz-envoyfilter.yaml
# Adapted version of https://raw.githubusercontent.com/open-policy-agent/opa-istio-plugin/f1d4c7f6deba9212c1a125b6a43af25e991ad936/quick_start.yaml

############################################################
# Envoy External Authorization filter that will query OPA.
############################################################
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz
  namespace: istio-system
spec:
  filters:
    - insertPosition:
        index: FIRST
      listenerMatch:
        listenerType: SIDECAR_INBOUND
        listenerProtocol: HTTP
      filterType: HTTP
      filterName: "envoy.ext_authz"
      filterConfig:
        with_request_body:
          max_request_bytes: 8192
          allow_partial_message: false
        grpc_service:
          # NOTE(tsandall): when this was tested with the envoy_grpc client the gRPC
          # server was receiving check requests over HTTP 1.1. The gRPC server in
          # OPA-Istio would immediately close the connection and log that a bogus
          # preamble was sent by the client (it expected HTTP 2). Switching to the
          # google_grpc client resolved this issue.
          google_grpc:
            target_uri: 127.0.0.1:9191
            stat_prefix: "ext_authz"
        failure_mode_allow: false # CHANGE: do NOT allow access if OPA fails
        metadata_context_namespaces: # CHANGE: pass identity information from access management
          - envoy.lua
    - insertPosition:
        index: FIRST
      listenerMatch:
        listenerType: SIDECAR_INBOUND
        listenerProtocol: TCP
      filterType: NETWORK
      filterName: "envoy.ext_authz"
      filterConfig:
        stat_prefix: "ext_authz"
        grpc_service:
          google_grpc:
            target_uri: 127.0.0.1:9191
            stat_prefix: "ext_authz"
---
